fix: correct section headline horizontal alignment

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -17,7 +17,7 @@
 .c-section__headline {
   position: absolute;
   right: 0;
-  transform: translate(+99px, -99px);
+  transform: translate(+250px, -99px);
 
   box-sizing: border-box;
   width: 338px;
